a1/brendan_gordon/TEST_PROGRAMS/invalidtype/armin_taheri/invalidtype2.min

var x: float;
var x: string;
var y: string;


x = "this is not ";
y = "a valid program";

print -(x + y);
